# raytracer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  blinn.cpp  blinn.h  buffer.h  camera.cpp  camera.h  color.cpp  color.h  image_buffer.cpp  image_buffer.h  main.cpp  math.h  matrix.h  plane.cpp  plane.h  ray.h  scene.cpp  scene.h  scene_geometry.cpp  scene_geometry.h  scene_light.cpp  scene_light.h  scene_object.cpp  scene_object.h  shader.cpp  shader.h  sphere.cpp  sphere.h  vector.h  vertex_buffer.cpp  vertex_buffer.h
stuff/: scene.blend
